--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,10 @@
             </li>
 
             <li class="nav-item">
+              <%= link_to 'New Idea', new_idea_path, class: "nav-link" %>
+            </li>
+
+            <li class="nav-item">
               <a class="nav-link" href="/pages/info">Info</a>
             </li>
 
