--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -8,7 +8,7 @@
     <p><b>Description: </b><%= @idea.description %></p>
     <p>
       <%= link_to 'Edit', edit_idea_path(@idea) %> |
-      <%= link_to 'Destroy', idea_path(@idea), data: { confirm: 'Are you sure?' }, method: :delete %> |
+      <%= button_to 'Destroy', idea_path(@idea), data: { confirm: 'Are you sure?' }, method: :delete %> |
       <%= link_to 'Back', ideas_path %>
     </p>
   </div>
